# tacleapp

./: ..gitignore.kate-swp  .dockerignore  .env.example  .gitignore  Dockerfile  README.md  out.html  pcconfig.json  remote_build.sh  requirements.txt  rxconfig.py  tailwind.config.ts
10tacle_frontend_bundle/: README.md  docker-compose.yml
10tacle_frontend_bundle/deploy/: deploy_frontend.sh  nginx.conf
app/: globals.css  layout.tsx  page.tsx
assets/: robots.txt  scene.glb  styles.css
assets/models/: duck.glb
components/: contact.py  contact.tsx
frontend/: __spa-fallback.html  index.html
frontend/assets/: _404_._index-Bwj3K91n.js  __reflex_global_styles-coUzQOrl.css  _index-B1ctkOnm.js  chunk-PVWAREVJ-ByEFXmki.js  createLucideIcon-DgYnZP9K.js  emotion-react.browser.esm-DHMO-yE9.js  entry.client-tQlmaDMC.js  jsx-runtime-LPmOjBqq.js  manifest-b1c9d061.js  reflex-env-CostSbh-.js  rolldown-runtime-aUZGWTHk.js  root-B-vVqi2D.js
frontend/stage3d/: index.jsx
ocr-search-system/: README.md  docker-compose.yml
ocr-search-system/api_service/: Dockerfile  main.py  requirements.txt
ocr-search-system/ocr_service/: Dockerfile  ocr_indexer.py  requirements.txt
scripts/: smtp_probe.py
stage3d/: .gitignore  README.md  pyproject.toml
stage3d/custom_components/reflex_stage3d/: __init__.py  stage3d.py
stage3d/stage3d_demo/: .gitignore  requirements.txt  rxconfig.py
stage3d/stage3d_demo/stage3d_demo/: stage3d_demo.py
tacleapp/: __init__.py  state.py  tacleapp.py  tacleapp.tsx
tacleapp/components/: __init__.py  about.py  contact.py  events.py  hero.py  music.py  (+3 more)
